feat: 三角形の各辺がCanvas領域エッジと交わる点を計算する関数を追加

--- a/triangle/canvas5sin_btn.html
+++ b/triangle/canvas5sin_btn.html
@@ -71,7 +71,7 @@
         />
 
         <h2>計算結果</h2>
-        a,b,c( <input type="text" id="a" placeholder="a" size="4" disabled />,
+        辺長 a,b,c( <input type="text" id="a" placeholder="a" size="4" disabled />,
         <input type="text" id="b" placeholder="b" size="4" disabled />,
         <input type="text" id="c" placeholder="c" size="4" disabled />)<br />
         s,S( <input type="text" id="s" placeholder="s" size="4" disabled />,
