feat: ページ読み込み時に、ランダム三角形を表示するよう変更

--- a/triangle/canvas5sin_btn.html
+++ b/triangle/canvas5sin_btn.html
@@ -5,8 +5,7 @@
     <title>Canvas triangle 5center</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-
-  <body>
+  <body onload="generateRandomTriangle()">
     <div id="canvas_wrapper">
       <canvas>
         Canvas not supported.
